scrollbar fix

--- a/client/static/scss/sections/_about.scss
+++ b/client/static/scss/sections/_about.scss
@@ -4,6 +4,7 @@
 	overflow-x: hidden;
 	flex-direction: row;
 	justify-content: space-around;
+	scrollbar-width: none;
 	@media only screen and (max-width: $bp-medium) {
 		flex-direction: column;
 		flex-grow: 1;
